@@ -1,8 +1,13 @@
 package com.project.usermanagementsystem.Services;
 
+import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Primary;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -24,10 +29,11 @@ public class CustomAdminService implements UserDetailsService{
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
        
-        Admin admin = adminRepository.findByemail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        Admin admin = adminRepository.findByEmail(email)
+                .orElseThrow(() -> new UsernameNotFoundException("Admin not found"));
         return new org.springframework.security.core.userdetails.User(admin.getEmail(), admin.getPassword(),
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority(admin.getRoles())));
     }
+
 
 }
