@@ -1,9 +1,12 @@
 package com.project.usermanagementsystem.Services;
 
+import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Primary;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -25,9 +28,9 @@ public class CustomManagerService implements UserDetailsService{
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         Manager manager = managerRepository.findByemail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
+                .orElseThrow(() -> new UsernameNotFoundException("Manager not found"+email));
         return new org.springframework.security.core.userdetails.User(manager.getEmail(), manager.getPassword(),
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority(manager.getRoles())));
     }
 
 }
